--- a/Style.css
+++ b/Style.css
@@ -95,7 +95,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90 deg, transparent #03e9f4);
+  background: linear-gradient(90deg, transparent, #03e9f4);
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -113,28 +113,28 @@ body {
   top: -100%;
   right: 0;
   width: 2px;
-  height: 100px;
-  background: linear-gradient(180 deg, transparent #03e9f4);
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
   animation: btn-anim2 1s linear infinite;
   animation-delay: .25s;
 }
 
 @keyframes btn-anim2 {
     0% {
-      left: -100%;
+      top: -100%;
     }
     50%,
     100% {
-      left: 100%;
+      top: 100%;
     }
   }
 /* ********************** */
   .login-box a span:nth-child(3) {
     bottom: 0;
-    right: -100px;
+    right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270 deg, transparent #03e9f4);
+    background: linear-gradient(270deg, transparent, #03e9f4);
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s;
   }
@@ -149,12 +149,12 @@ body {
     }
   }
 /* **************** */
-  .login-box a span:nth-child(3) {
+  .login-box a span:nth-child(4) {
     bottom: -100%;
-    left: -100px;
+    left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360 deg, transparent #03e9f4);
+    background: linear-gradient(360deg, transparent, #03e9f4);
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s;
   }
